# rust-haiku-generator

./: Cargo.toml  README.md
src/: cli.yml  haiku.rs  main.rs  markov.rs
