[package]
name = "haiku-generator"
version = "0.1.0"
authors = ["becker <github@deathbyescalator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
getopts = { version = "0.2" }
petgraph = { version = "0.4"}
itertools = "*"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = { version = "0.7" }
