[package]
name = "haiku-generator"
version = "0.1.0"
authors = ["becker <github@deathbyescalator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmudict_core = {branch= "fix/update-reqwest-version", git= "https://gitlab.com/shnewto/cmudict.git", version="*"}
lazy_static = "*"
rand = "*"
Inflector = "*"
wordsworth = "*"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
getopts = { version = "0.2" }
petgraph = { version = "0.4"}
itertools = "*"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = { version = "0.7" }
whatlang = "*"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
incremental = false
opt-level = "z"
